Убрал сохранение в формате excel, использовал модель GigaChat-Plus.

--- a/pdf_summary_app/pdfprocessor/templates/pdfprocessor/upload.html
+++ b/pdf_summary_app/pdfprocessor/templates/pdfprocessor/upload.html
@@ -40,8 +40,8 @@
 
         <!-- Кнопки для скачивания -->
         <div id="download-link-container" class="text-center" style="display:none;">
-            <a id="download-docx" href="#" class="btn btn-success mb-2">Скачать распознанный DOCX</a>
-            <a id="download-summary-docx" href="#" class="btn btn-info">Скачать Summary в формате Excel</a> <!-- Кнопка для скачивания Excel -->
+            <a id="download-docx" href="#" class="btn btn-success mb-2">Скачать документ</a>
+            <a id="download-summary-docx" href="#" class="btn btn-info">Скачать Summary</a> <!-- Кнопка для скачивания Excel -->
         </div>
     </div>
 
